2008-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs, gtk-gui/gui.stetic,
	  Mono.Addins.Gui.mdp: Flush.

2008-02-06  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs: Added support for pluggable add-in assembly reflectors.
	  Implemented an add-in assembly reflector based on Cecil.

2008-01-17  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/Mono.Addins.Gui.ManageSitesDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs,
	  gtk-gui/Mono.Addins.Gui.ErrorDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInfoDialog.cs,
	  gtk-gui/Mono.Addins.Gui.AddinInstallerDialog.cs: Regenerated.
	* gtk-gui/Mono.Addins.Gui.ProgressDialog.cs, gtk-gui/gui.stetic,
	  Makefile.am, Mono.Addins.Gui.mdp, Mono.Addins.Gui/ProgressDialog.cs:
	  Added new progress dialog to be used when updating registries.
	* Mono.Addins.Gui/ManageSitesDialog.cs: When adding a repository, update it
	  to get the add-in list.
	* Mono.Addins.Gui/AddinInstallDialog.cs: Improve progress reporting.

2008-01-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Gui.csproj: Updated VS solution files. Patch by Andrés G.
	  Aragoneses.

2007-12-15  Lluis Sanchez Gual <lluis@novell.com> 

	* mono-addins-gui.pc.in: Update assembly paths.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am: Generate and install policy files for old Mono.Addins
	  versions.

2007-12-11  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/Mono.Addins.Gui.AddinInstallDialog.cs,
	  gtk-gui/Mono.Addins.Gui.NewSiteDialog.cs, gtk-gui/gui.stetic,
	  Makefile.am, Mono.Addins.Gui.mdp, Mono.Addins.Gui/AddinInstallDialog.cs:
	  Properly report warnings when installing add-ins.

2007-12-05  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/gui.stetic, Mono.Addins.Gui.mdp: Flush.
	* Mono.Addins.Gui/AddinInstallDialog.cs: When checking if an add-in is